fix hero section button alignment on mobile screens

--- a/assets/sass/jena.scss
+++ b/assets/sass/jena.scss
@@ -62,6 +62,34 @@ a {
   margin-right: 0.3rem;
 }
 
+#jumbotron {
+  .btn-jumbotron {
+    margin-bottom: 0.5rem;
+    
+    @media (max-width: 576px) {
+      display: block;
+      width: 100%;
+    }
+    
+    @media (min-width: 577px) {
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+
+  p {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+
+    @media (max-width: 576px) {
+      flex-direction: column;
+      gap: 0;
+    }
+  }
+}
+
 /* single */
 
 main {
